k8s/apps/video-processing-base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: video-processing
  labels:
    name: video-processing
